tests/traci/variable_subscription/errors/UnknownCommand/errors.traci
Error: Requested command not implemented (0xff): Command not implemented in sumo
